- [Feature] Transparently support role­based access, including cross­account using AWS Security Token Service (STS), configured in the standard AWS SDK credentials file (S3) (#8880)
- [Feature] Prompt for an MFA token during authentication when specified in the profile from the standard AWS SDK credentials file (S3)
- [Bugfix] Allow configuration of charset in bookmark (SFTP)
- [Bugfix] Incomplete transfers (#10347)
- [Bugfix] Skip checksum validation for files encrypted with SSE-KMS (S3) (#10371)
- [Bugfix] Retain metadata on server side copy of file (S3) (#10341)
- [Bugfix] Failure creating new vault (Cryptomator, OneDrive)
- [Bugfix] Missing links in copy URL menu (CloudFront) (#10402)

6.6.2
- [Bugfix] Cannot write to shared folders (Google Drive)
- [Bugfix] Repeated prompt for private key (SFTP, Mac App Store)
- [Bugfix] Authenticating with password protected ed25519 private key (SFTP) (#10130)

6.6.1
- [Bugfix] Crash attempting to add empty password to keychain (SFTP, macOS) (#10342)

6.6.0
- [Feature] Use toast notifications (Windows) (#10268)
- [Feature] Include shared items (OneDrive) (#10107)
- [Feature] Add support to login with Shared Access Signature (SAS) Token (Azure) (#10321)
- [Feature] Support to queue transfers (#9984)
- [Feature] Create and delete team drives (Google Drive)
- [Bugfix] Cannot create new vault in team drive (Google Drive, Cryptomator) (#10324)
- [Bugfix] Missing files in folders of vault (Google Drive, Cryptomator) (#10315)
- [Bugfix] Application error when opening connection (DRACOON) (Windows Store)
- [Bugfix] Disabled menu item to create new container (Azure)
- [Bugfix] Disabled menu item to create new bucket (Backblaze B2)

6.5.0
- [Bugfix] Improved performance accessing vaults (Cryptomator)
- [Bugfix] Improved performance accessing files (Backblaze B2, Google Drive)
- [Bugfix] Allow reuse of OAuth tokens (Cyberduck CLI, Windows)

6.4.6
- [Bugfix] Fix use proxy configuration using PAC file (macOS)