@@ -79,7 +79,7 @@
     </li>
     <li><span class="label label-success">Feature</span> Improve user experience for versioned buckets,
         e.g. properly hide folders with a delete marker (S3) (<a
-        href="https://trac.cyberduck.io/ticket/10357">#10357</a>)
+            href="https://trac.cyberduck.io/ticket/10357">#10357</a>)
     </li>
     <li><span class="label label-success">Feature</span> Transparently support role­based access, including
         cross­account using AWS Security Token Service (STS), configured in the standard AWS SDK credentials file (S3)
@@ -88,6 +88,10 @@
     </li>
     <li><span class="label label-success">Feature</span> Prompt for an MFA token during authentication when specified in
         the profile from the standard AWS SDK credentials file (S3)
+    </li>
+    <li><span class="label label-success">Feature</span> Interoperability with Microsoft Office 365 Deutschland
+        (OneDrive) (<a
+            href="https://trac.cyberduck.io/ticket/10291">#10291</a>)
     </li>
     <li><span class="label label-warning">Bugfix</span> Allow configuration of charset in bookmark (SFTP)</li>
     <li><span class="label label-warning">Bugfix</span> Incomplete transfers (<a
